Fixed design on mobile
Responses list was squished on mobile, so it was fixed.

--- a/src/Components/Post/PostDetail.css
+++ b/src/Components/Post/PostDetail.css
@@ -34,6 +34,13 @@
 	/* break-inside: avoid-column; */
 }
 
+
+@media only screen and (max-width: 600px) {
+	.response-list {
+		column-count: 1;
+	}
+}
+
 .response {
 	/* width: 23rem; */
 	background-color: #F0F0F0;
